--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Friends</string>
+    <string name="password_hint">Password</string>
+    <string name="Username_hint">Username</string>
+    <string name="Login">Login</string>
+    <string name="google_login">Google Login</string>
 </resources>
