tried to do more stuff to login but im having issues with firebase authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="Username_hint">Username</string>
     <string name="Login">Login</string>
     <string name="google_login">Google Login</string>
+    <string name="createuser_button">Dont have an account? Sign Up</string>
+    <string name="textviewsignUp">Dont have an account? Sign Up</string>
+    <string name="textviewlogin">Already have an account? Log In</string>
+    <string name="signupButton">SIGN UP</string>
 </resources>
